--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,14 @@
-#Basic
-numpy
-
-#Data
-roboflow
-
-#ML
-ultralytics==8.0.196
-ipykernel
-ipython
-
-# Logging
-comet_ml
-
-# Image processing
-opencv-python
-
-#api
 uvicorn
 fastapi
-
-
+numpy
+roboflow
+ultralytics
+ipykernel
+ipython
+comet_ml
+opencv-python
 python-multipart
-
 ipdb
 av
 streamlit
 streamlit_webrtc
-
-
-gym==0.22.0
-pygame
